<resources>
    <string name="app_name">SOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="nav_pacjenci">Pacjenci</string>
    <string name="nav_pracownicy">Pracownicy</string>
    <string name="nav_wizyty">Wizyty</string>
    <string name="nav_badania">Badania</string>
    <string name="nav_slownik">Słownik</string>
    <string name="witamy">Witamy w aplikacji SOS</string>
</resources>