<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.menu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.example.menu.ui.patient.PatientFragment"
        android:label="@string/nav_pacjenci"
        tools:layout="@layout/fragment_patient" />

    <fragment
        android:id="@+id/nav_worker"
        android:name="com.example.menu.ui.worker.WorkerFragment"
        android:label="@string/nav_pracownicy"
        tools:layout="@layout/fragment_worker" />

    <fragment
        android:id="@+id/nav_visit"
        android:name="com.example.menu.ui.visit.VisitFragment"
        android:label="@string/nav_wizyty"
        tools:layout="@layout/visit_fragment" />

    <fragment
        android:id="@+id/nav_exam"
        android:name="com.example.menu.ui.exam.ExamFragment"
        android:label="@string/nav_badania"
        tools:layout="@layout/exam_fragment" />
</navigation>